--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🎯 终末地基质刷取优化器</h1>
+        <h1>🎯 终末地基质刷取大师</h1>
 
         <div class="section">
             <h2>选择武器</h2>
